<resources>
    <string name="app_name">Beetrack Dev</string>
    <string name="asset">Tài sản</string>
    <string name="scan">Scan</string>
    <string name="report">Báo cáo</string>
    <string name="exit">Thoát</string>
    <string name="confirm_exit">Bạn muốn thoát?</string>
    <string name="no_internet">No internet, please check your connection!</string>
    <string name="blank_username">Bạn chưa nhập username</string>
    <string name="blank_password">Bạn chưa nhập password</string>
    <string name="barcode_not_found">Không tìm thấy, vui lòng thử lại</string>
    <string name="barcode_error">Barcode lỗi</string>
    <string name="asset_scan_already">Đã scan</string>
    <string name="scan_success">OK</string>
    <string name="scanned">Đã scan</string>
    <string name="not_scan_yet">Chưa scan</string>
    <string name="completed">Đã xong</string>
    <string name="not_complete_yet">Chưa xong</string>
    <string name="asset_name">Tên tài sản</string>
    <string name="asset_code">Mã tài sản</string>
    <string name="detail_note">Ghi chú tài sản:</string>
    <string name="choose_session">Chọn session</string>
    <string name="change_session">Đổi session</string>
    <string name="filter">Lọc</string>
    <string name="submit">Gửi asset đã scan</string>
    <string name="confirm">Scan xong session này</string>
    <string name="confirm_confirm">Bạn muốn xác nhận scan xong session này?</string>
    <string name="department">Phòng ban</string>
    <string name="warehouse">Kho</string>
    <string name="warehouse_seri">Số nhập kho</string>
    <string name="user_using">Người sử dụng</string>
    <string name="seri">Số seri</string>
    <string name="status">Trạng thái</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="all">Tất cả</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="print">In</string>
    <string name="total_asset">Tổng tài sản</string>
    <string name="lost_asset">Tài sản mất</string>
    <string name="date">Ngày</string>
    <string name="user_scan">Người scan:</string>
    <string name="list_lost_asset">Danh sách tài sản mất:</string>
    <string name="name_ts">Tên TS</string>
    <string name="date_kk">Ngày KK</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="pj_700_series">PJ-700 Series</string>
    <string name="rj_4030ai">RJ-4030Ai</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="UnableAccess">Unable Access…</string>
    <string name="noNetDevice">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="setting_alignment">Set Alignment</string>
    <string name="setting_PJ">Set PocketJet Parameter</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.4\n© 2016 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progressDialogMessage_preparingConnection">Preparing the connection…</string>
    <string name="progressDialogMessage_createData">Creating the data</string>
    <string name="progressDialogMessage_sendingData">Sending the data…</string>
    <string name="progressDialogMessage_sendingPrintingData">Sending the data…</string>
    <string name="progressDialogMessage_startPrint">Printing the data </string>
    <string name="progressDialogMessage_dataSent">The data was sent </string>
    <string name="progressDialogMessage_printed">The printing process was completed </string>
    <string name="progressDialogMessage_CloseConnection">Closing the connection</string>
    <string name="progressDialogMessage_SetPaper">Please Set Paper</string>
    <string name="progressDialogMessage_CoolingStart">Printer cooling start</string>
    <string name="progressDialogMessage_CoolingEnd">Printer cooling end</string>
    <string name="progressDialogMessage_WaitingPeel">Wait for peeling label</string>
    <string name="progressDialogMessage_sendingTemplateData">File transferring</string>
    <string name="progressDialogMessage_getting_bluetoothsetting">Getting Bluetooth settings </string>
    <string name="progressDialogMessage_setting_bluetoothsetting">Transfering Bluetooth settings </string>
    <string name="progressDialogMessage_removing_template">Removing templates </string>
    <string name="progressDialogMessage_getting_template">Getting template list </string>
    <string name="ErrorMessage_ERROR_NONE">Succeeded</string>
    <string name="alertDialogMessage_runtimeError">Runtime error occurred </string>
    <string name="printerModel_title">PrinterModel</string>
    <string name="printerModel_value">Select the printer model </string>
    <string name="ErrorMessage_WRONG_OS">Android OS is not supported</string>
    <string name="ErrorMessage_NO_USB">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="macAddress_title">MAC address</string>
    <string name="macAddress_value">Set the number of mac address </string>
    <string name="paperSize_title">Paper size</string>
    <string name="paperSize_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string-array name="orientation">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="orientationValues">
        <item>PORTRAIT</item>
        <item>LANDSCAPE</item>
    </string-array>
    <string name="numberOfCopies_title">Number of copies</string>
    <string name="numberOfCopies_value">Set the number of copies </string>
    <string name="halfToning_title">Half toning</string>
    <string name="halfToning_value">Select the half toning method </string>
    <string name="imageThresholding_title">Threshold of simple binary</string>
    <string name="imageThresholding_value">Select the threshold </string>
    <string name="scaleValue_title">Scale value</string>
    <string name="scaleValue_value">Select the scale value </string>
    <string-array name="halfToning">
        <item>Threshold</item>
        <item>Pattern dithering</item>
        <item>Error diffusion</item>
    </string-array>
    <string-array name="halfToningValues">
        <item>THRESHOLD</item>
        <item>PATTERNDITHER</item>
        <item>ERRORDIFFUSION</item>
    </string-array>
    <string name="fitToPage_title">Fit to page</string>
    <string name="fitToPage_value">Select if fitting to page </string>
    <string-array name="checkPrintEnd">
        <item>Not check</item>
        <item>Skip last page</item>
        <item>Check</item>
    </string-array>
    <string-array name="checkPrintEndValues">
        <item>CPE_NO_CHECK</item>
        <item>CPE_SKIP_LAST</item>
        <item>CPE_CHECK</item>
    </string-array>
    <string-array name="fitToPage">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>CUSTOM</item>
    </string-array>
    <string-array name="fitToPageValues">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>SCALE</item>
    </string-array>
    <string-array name="isCarbon">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="isCarbonValues">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="mode9">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="mode9Values">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="skipStatusCheck">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="skipStatusCheckValues">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="printerCase">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="printerCaseValues">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="pjSpeedValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="isCarbon_title">Carbon</string>
    <string name="isCarbon_value">Select the carbon</string>
    <string name="pjDensity_title">PJ Density</string>
    <string name="pjDensity_value">Select the PJ density</string>
    <string name="mode9_title">Mode9</string>
    <string name="mode9_value">Select the Mode9</string>
    <string name="pjSpeed_title">PJ Speed</string>
    <string name="pjSpeed_value">Select the PJ speed</string>
    <string name="printerCase_title">Printer case</string>
    <string name="printerCase_value">Select the printer case</string>
    <string name="isskipStatusCheck_title">Skip Status Check</string>
    <string name="isskipStatusCheck_value">Select Skip Status Check mode</string>
    <string name="checkPrintEnd_title">Check the print end</string>
    <string name="checkPrintEnd_value">Check the print end</string>
</resources>