<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lnlContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shadow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lnlFooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnlAsset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvAsset"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_asset_gray" />

            <TextView
                android:id="@+id/txtAsset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dm_2dp"
                android:text="@string/asset"
                android:textColor="@color/txt_black_99"
                android:textSize="@dimen/txt_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlScan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvScan"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_scan_gray" />

            <TextView
                android:id="@+id/txtScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/txt_black_99"
                android:textSize="@dimen/txt_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlReport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvReport"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_report_gray" />

            <TextView
                android:id="@+id/txtReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="@color/txt_black_99"
                android:textSize="@dimen/txt_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlExit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvExit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dm_20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_exit_gray" />

            <TextView
                android:id="@+id/txtExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textColor="@color/txt_black_99"
                android:textSize="@dimen/txt_12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
