<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/main_color"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/dm_5dp"
            android:paddingRight="@dimen/dm_5dp"
            android:singleLine="true"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <dne.beetrack.view.MyCheckbox
                android:id="@+id/btnScanned"
                android:layout_width="@dimen/dm_30dp"
                android:layout_height="@dimen/dm_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dm_5dp"
                android:text="@string/scanned"
                android:textColor="@color/txt_black_33"
                android:textSize="@dimen/txt_15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <dne.beetrack.view.MyCheckbox
                android:id="@+id/btnNotScanYet"
                android:layout_width="@dimen/dm_30dp"
                android:layout_height="@dimen/dm_30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dm_5dp"
                android:text="@string/not_scan_yet"
                android:textColor="@color/txt_black_33"
                android:textSize="@dimen/txt_15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_40dp"
        android:layout_marginTop="@dimen/dm_20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dm_10dp"
        android:paddingRight="@dimen/dm_10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/txt_15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlDepartment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDepartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/txt_black_55"
                android:textSize="@dimen/txt_15sp" />

            <ImageView
                android:layout_width="@dimen/dm_20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_arrow_down_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_40dp"
        android:layout_marginTop="@dimen/dm_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dm_10dp"
        android:paddingRight="@dimen/dm_10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/txt_15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/txt_black_55"
                android:textSize="@dimen/txt_15sp" />

            <ImageView
                android:layout_width="@dimen/dm_20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_arrow_down_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm_40dp"
        android:layout_marginTop="@dimen/dm_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dm_10dp"
        android:paddingRight="@dimen/dm_10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_category"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/txt_15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlSubCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSubCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/txt_black_55"
                android:textSize="@dimen/txt_15sp" />

            <ImageView
                android:layout_width="@dimen/dm_20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_arrow_down_gray" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="@dimen/dm_50dp"
        android:layout_height="@dimen/dm_50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dm_50dp"
        android:background="@drawable/btn_circle_main"
        android:text="OK"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_15sp"
        android:textStyle="bold" />
</LinearLayout>